log
Thu 23 Mar 2023 09:49:40 PM UTC: 
 tests:  0|6
total_score: 0/70
b508575
Fri 24 Mar 2023 11:23:17 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   32 |   List *aux = (List *) malloc(sizeof(List));
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
24724bf
Fri 24 Mar 2023 11:24:11 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   32 |   List *aux = (List *) malloc(sizeof(List));
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
befe45a
Fri 24 Mar 2023 11:24:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/time.h:29,
                 from test.c:4:
list.c: In function ‘createList’:
list.c:33:7: error: incompatible types when assigning to type ‘List’ {aka ‘struct List’} from type ‘void *’
   33 | *aux= NULL;
      |       ^~~~
Compilation failed
696513a
Fri 24 Mar 2023 11:27:01 AM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
5a21ece
Fri 24 Mar 2023 11:38:07 AM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 15/70
10ce47c
